<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RelativeLayoutSampleActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/RLS_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/PrimaryTextColor"
            android:paddingStart="16dp"
            android:text="@string/Views_Toolbar_Android_Simple_Relative_Layout"/>
    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/button_RLS_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/Relative_Layout_saveButton"
        android:layout_alignParentBottom="true"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_above="@id/button_RLS_save"
        android:text="@string/Relative_Layout_cancelButton" />
    <Button
        android:id="@+id/button_RLS_A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/RLS_toolbar"
        android:text="@string/Relative_Layout_ButtonA"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/RLS_toolbar"
        android:layout_toEndOf="@id/button_RLS_A"
        android:text="@string/Relative_Layout_ButtonB"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/button_RLS_A"
        android:text="@string/Relative_Layout_ButtonC" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/Relative_Layout_ButtonD"/>
</RelativeLayout>