<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecyclerViewSample">



    <LinearLayout
        android:id="@+id/ll_recyclerViewSample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_recyclerViewSample_addEmail"
            android:layout_width="0dp"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/RecyclerViewSample_Button_addEmail"/>

        <Button
            android:id="@+id/btn_recyclerViewSample_removeEmail"
            android:layout_width="0dp"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/RecyclerViewSample_Button_removeEmail"/>

        <Button
            android:id="@+id/btn_recyclerViewSample_notifyAll"
            android:layout_width="0dp"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/RecyclerViewSample_Button_NotifyAll"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_recyclerViewSample"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ll_recyclerViewSample"/>
</RelativeLayout>